--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </div>
     <div class="footer">
-        Made by: <a href="https://github.com/sevleo"><img id="gh-logo" src="./images/githublogo.png" alt="github logo"> Seva Leonov</a>
+        Made by: <a href="https://github.com/sevleo"><img id="gh-logo" src="./images/githublogo.png" alt="github logo"> Sev Leo</a>
     </div>
 </body>
 </html>
